Revision history for Rex

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [MAJOR]

 [MINOR]

 [NEW FEATURES]

 [REVISION]

1.11.0 2020-06-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Make group resource idempotent
 - Fix sysctl detection for Gentoo
 - Fix setting false values as sysctl parameters
 - Fix passing external_master as Net::OpenSSH constructor parameter

 [DOCUMENTATION]
 - Clarify auth documentation
 - Clarify setting per-host authentication details within a group
 - Clarify documentation of configuring OpenSSH options
 - Clarify Rex::Transaction documentation
 - Fix typos
 - Document limitations of nesting shared variables
 - Add initial documentation for Rex::Hook
 - Clarify hooks documentation
 - Clarify synopsis and code example for Rex::Commands::MD5

 [ENHANCEMENTS]
 - Check availability of sysctl command
 - Checksum file only when content is managed
 - Support dotted semantic versioning for trial releases

1.10.0 2020-05-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix warning about redundant arguments when using sync with key
   authentication
 - Fix setting distributor when versioned feature flags are active
 - Remove default host of test tasks
 - Fix task hooks specified in Rexfile for tasks defined in modules

 [DOCUMENTATION]
 - Clarify sudo usage for multiple commands
 - Clarify task hooks documentation
 - Clarify usage and purpose of configuration methods
 - Clarify mkdir usage

 [ENHANCEMENTS]
 - Add on_change option for mkdir
 - Support package globs on FreeBSD

 [NEW FEATURES]
 - Add new configuration option to control attaching default authentication
   info to tasks
 - Initial support for package globs

1.9.0 2020-04-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix setting custom waitpid_blocking_sleep_time
 - Fix autodie feature for local unlink commands

 [DOCUMENTATION]
 - Categorize file system commands based on ability to change contents